Header format for lightweight lock and heavyweight lock. Using both biased and non biased lock
Summary:
biased_lock:0 , last two digit: 01--------->: Normal
biased_lock:1 , last two digit: 01--------->: Biased

ptr_to_lock_record:62 , last two digit: 00--------->: Lightweight Locked
ptr_to_heavyweight_monitor:62 , last two digit: 10--------->: Heavyweight Locked